// FinderSyncExtensionService.proto
syntax = "proto3";

package generic;

enum MenuActionType {
  EXCHANGE = 0;
  COMBINE = 1;
}

message MenuActionRequest {
  MenuActionType action = 1;
  repeated string path = 2;
}

message ErrorResponse {
  string errorMessage = 1;
}

message Response {
  oneof result {
    EmptyResponse success = 1;
    ErrorResponse error = 2;
  }
}

message EmptyResponse {}

message UnlockWalletFolderRequest {
  string revAddress = 1;
  string privateKey = 2;
}

service FinderSyncExtensionService {
  rpc SubmitAction(MenuActionRequest) returns (Response);
  rpc UnlockWalletFolder(UnlockWalletFolderRequest) returns (Response);
}
